# innernets

./: .gitignore  AGENTS.md  README.md  compose.local.yml  compose.staging.yml
backend/: .dockerignore  .env.dev  .env.example  .env.example.local.docker  .env.example.staging  .env.local.docker  .env.prod  AGENTS.md  Dockerfile  ENVIRONMENT.md  EXA_USAGE.md  LLM_ADAPTER.md  Procfile  README.md  SCHEDULER.md  SCHEMA.md  SUPABASE_RUNBOOK.md  TODO.md  pyproject.toml  supa_mind_test_token.sh  supa_mint_test_token.sh
backend/migrations/: 2025-08-26_0001_profiles.sql  2025-08-27_0002_scheduler.sql  2025-08-29_0003_streams_curations_urls.sql  2025-09-25_0004_curation_body_md.sql  2025-09-27_0005_runs_job_id_unique.sql
backend/src/app/: auth.py  config.py  deps.py  main.py  models.py  run_backend.py  supabase_client.py
backend/src/app/agents/: dispatcher.py  search_loop.py  search_workflow.py  surfer_workflow.py
backend/src/app/clients/: exa_client.py  exa_schemas.py  surfer_client.py
backend/src/app/explorer/: README.md  __init__.py  ansi.py  llm.py  logger.py  models.py  prompts.py  runner.py
backend/tests/: test_dispatcher.py  test_error_model.py  test_exa_live.py  test_exa_routes.py  test_health.py  test_jobs_worker.py  test_llm_adapter.py  test_llm_live.py  test_llm_schema_coercion.py  test_profile_api.py  test_search_workflow_live.py  test_search_workflow_mock.py  test_search_workflow_persistence.py  test_streams_api.py  test_streams_contracts.py  test_supabase_client.py  test_surfer_client.py  test_surfer_settings.py  test_ticker.py  test_urls_repo.py
(+95 files in other folders)
