[tool.poetry]
name = "innernets-backend"
version = "0.1.0"
description = "InnerNets backend service (FastAPI, Supabase)"
authors = ["InnerNets AI Inc <dev@innernets.ai>"]
readme = "README.md"
packages = [
  { include = "app", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.111.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
python-dotenv = ">=1.0.1"
supabase = ">=2.5.1"
httpx = ">=0.27.0"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  "src",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
